--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ include_package_data = True
 AngrDB =
     sqlalchemy
 docs =
-    furo
+    furo==2023.7.26
     myst-parser
     sphinx
     sphinx-autodoc-typehints
